force-app/main/default/objects/Life_Sciences__c/Life_Sciences__c.object-meta.xml
<CustomObject>
    <description>Price lists for Life Sciences Price Book products. This object is primarily used by price rules to pick the correct price.</description>
    <label>Life Sciences</label>
    <nameField>
        <displayFormat>LFSC-{00000000}</displayFormat>
        <label>Life Sciences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Sciences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>