force-app/main/default/objects/Life_Sciences__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this record is active. Unchecked means it will not be used in price rules.</description>
    <inlineHelpText>Checked if this record is active. Unchecked means it will not be used in price rules.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>