force-app/main/default/objects/Life_Sciences__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <description>Formula from Event Edition. Represent if Advance pricing is used.</description>
    <formula>Event_Edition__r.Advance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula from Event Edition. Represent if Advance pricing is used.</inlineHelpText>
    <label>Advance</label>
    <type>Checkbox</type>
</CustomField>