force-app/main/default/objects/Life_Sciences__c/fields/Advance_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>Advance_Cutoff__c</fullName>
    <description>Formula from Event Edition. Used in Price Rules.</description>
    <formula>Event_Edition__r.Advance_Cutoff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula from Event Edition. Used in Price Rules.</inlineHelpText>
    <label>Advance Cutoff</label>
    <type>Date</type>
</CustomField>