force-app/main/default/objects/Life_Sciences__c/fields/Advance_Price__c.field-meta.xml
<CustomField>
    <fullName>Advance_Price__c</fullName>
    <description>Advance Price for the product selected. Used from Price Rules.</description>
    <inlineHelpText>Advance Price for the product selected. Used from Price Rules.</inlineHelpText>
    <label>Advance Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>