force-app/main/default/objects/Life_Sciences__c/fields/Event_Edition__c.field-meta.xml
<CustomField>
    <fullName>Event_Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Event Edition</description>
    <inlineHelpText>Lookup for Event Edition</inlineHelpText>
    <label>Event Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Life Sciences</relationshipLabel>
    <relationshipName>Life_Sciences</relationshipName>
    <type>Lookup</type>
</CustomField>