force-app/main/default/objects/Life_Sciences__c/fields/Event_Edition_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Edition_Name__c</fullName>
    <description>Formula from Event Edition. Used by Price Rule.</description>
    <formula>Event_Edition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula from Event Edition. Used by Price Rule.</inlineHelpText>
    <label>Event Edition Name</label>
    <type>Text</type>
</CustomField>