force-app/main/default/objects/Life_Sciences__c/fields/Group_By_PRule__c.field-meta.xml
<CustomField>
    <fullName>Group_By_PRule__c</fullName>
    <description>Formula from Product. Used for Price / Product Rules, to define certain groups of products.</description>
    <formula>TEXT(Product__r.Group_By_PRule__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula from Product. Used for Price / Product Rules, to define certain groups of products.</inlineHelpText>
    <label>Group By PRule</label>
    <type>Text</type>
</CustomField>