force-app/main/default/objects/Life_Sciences__c/fields/ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code__c</fullName>
    <description>Price in different currencies require text representation of ISO Code used by Price Rules.</description>
    <formula>TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price in different currencies require text representation of ISO Code used by Price Rules.</inlineHelpText>
    <label>ISO Code</label>
    <type>Text</type>
</CustomField>