force-app/main/default/objects/Life_Sciences__c/fields/Late__c.field-meta.xml
<CustomField>
    <fullName>Late__c</fullName>
    <description>If checked apply late price based on standard cutoff date, otherwise take standard price</description>
    <formula>Event_Edition__r.Late__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked apply late price based on standard cutoff date, otherwise take standard price</inlineHelpText>
    <label>Late</label>
    <type>Checkbox</type>
</CustomField>