force-app/main/default/objects/Life_Sciences__c/fields/Late_Price__c.field-meta.xml
<CustomField>
    <fullName>Late_Price__c</fullName>
    <description>Late price of the product.</description>
    <inlineHelpText>Late price of the product.</inlineHelpText>
    <label>Late Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>