force-app/main/default/objects/Life_Sciences__c/fields/Max_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Size__c</fullName>
    <description>Maximum Size of the product. Used by Price Rule.</description>
    <inlineHelpText>Maximum Size of the product. Used by Price Rule.</inlineHelpText>
    <label>Max Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>