force-app/main/default/objects/Life_Sciences__c/fields/Min_Size__c.field-meta.xml
<CustomField>
    <fullName>Min_Size__c</fullName>
    <description>Minimum Size of the product. Used by Price Rule.</description>
    <inlineHelpText>Minimum Size of the product. Used by Price Rule.</inlineHelpText>
    <label>Min Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>