force-app/main/default/objects/Life_Sciences__c/fields/Non_Exhibitor_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Exhibitor_Price__c</fullName>
    <description>Non Exhibitor Price for the product. Used by Price Rules.</description>
    <inlineHelpText>Non Exhibitor Price for the product. Used by Price Rules.</inlineHelpText>
    <label>Non Exhibitor Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>