force-app/main/default/objects/Life_Sciences__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price for the product. Used by Price Rules.</description>
    <inlineHelpText>Price for the product. Used by Price Rules.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>