force-app/main/default/objects/Life_Sciences__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Product.</description>
    <inlineHelpText>Lookup for Product.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Life Sciences</relationshipLabel>
    <relationshipName>Life_Sciences</relationshipName>
    <type>Lookup</type>
</CustomField>